Closed Bug 324967 Opened 19 years ago Closed 19 years ago

Black stripes and delay while scrolling in Cairo

Categories

(Core :: Graphics, defect)

x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: ria.klaassen, Assigned: vlad)

References

()

Details

(Whiteboard: cairo)

Attachments

(4 files)

Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060127 Firefox/1.6a1 ID:2006012704 Steps to reproduce: 1. Go to http://www.rnw.nl/nieuws/nederlands.html#3292436 2. Set smooth scrolling on in Options > Advanced (not sure if this is required) 3. Then scroll down quickly 4. You'll see black stripes and if not 5. Grab the scrollbar and scroll as fast as you can 6. And you'll notice a certain delay. 7. Now start a normal trunk build in the same profile and go to the site 8. And do the same 9. You'll notice that it scrolls a lot quicker without stripes
Component: GFX: Win32 → GFX: Thebes
Assignee: win32 → nobody
QA Contact: ian → thebes
Smooth scrolling is not necessary, I see this too with it off. Another site with the same problem (but only on the background) is http://www.mameworld.net/maws/romset/pacman Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060127 Firefox/1.6a1 ID:2006012707
Attached file reduced testcase
Well, the cause seems to be the background image - the problem appears in this testcase with the background image from http://www.rnw.nl/nieuws/nederlands.html and another tag to make the page big enough to scroll.
Status: NEW → ASSIGNED
Assignee: nobody → vladimir
Status: ASSIGNED → NEW
OS: Windows XP → All
*** Bug 311719 has been marked as a duplicate of this bug. ***
Blocks: 324863
Okay, I was just told about this bug by a friend. I hadn't noticed it to this point, but I found some conditions that were required for me to see it. With smooth scrolling off: If I grab the scroll bar and pull it, this happens. If I use the scroll wheel on my mouse, no matter how fast I scroll, it doesn't happen. With smooth scrolling on it happens even when I use my scroll wheel on my mouse. So I assume this has something to do with the fact that smooth scrolling and pulling the scrollbar manually both scroll very small amounts at a time (a matter of pixels), whereas scrolling with the mouse wheel when smooth scrolling is off scrolls about 20 pixels at a time.
Stripes are very visible with scrolling by up and down keys.
Here the striping effect is a little different http://www.spacetelescope.org/projects/anniversary/outlets.html It's reproduced by the same actions but the stiping effect involves only the grey borders.
Whiteboard: cairo
Smooth scrolling has no effect on this for me. On sites that have this issue the only way I can scroll without issues is via pgup pgdn keys. This issue is most apparent for me on www.speedtv.com. A sample URL with a severe issue is http://www.speedtv.com/articles/
Flags: blocking1.9a1?
Fix, calculate whether we really have to repeat or not correctly. I blame linux for even making me go down this route (instead of just setting CAIRO_EXTEND_REPEAT always).
Attachment #217385 - Flags: review?(pavlov)
How can Linux be to blame when this bug also happens on Fx for Windows? I'm using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060404 Firefox/1.6a1
Please increase Severity to "Major", as this bug makes many web pages hard/impossible to read.
(In reply to comment #11) > Please increase Severity to "Major", as this bug makes many web pages > hard/impossible to read. > I am changing the priority to major as that si probably appropriate according to the definitions of the priorities, but it really makes little difference at this point as there is now a patch that seems to fix the issue (at least it fixes it under windows for me). As a workaround until the patch lands, just don't scroll pages that have the issue using either the mousewheel or by dragging the scrollbar handle. Just scroll the page either via keyboard PageUp PageDown keys or by clicking either above or below the scrollbar handle.
Severity: normal → major
Attachment #217385 - Flags: review?(pavlov) → review+
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
*** Bug 324863 has been marked as a duplicate of this bug. ***
No longer blocks: 324863
Flags: blocking1.9a1?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: