b=324967, black strips while scrolling with cairo, r=stuart